# geodesic_toolbox

./: .gitignore  README.md  geodesic_distance.py  pyproject.toml  samplers.py  setup.py
examples/: examples_samplers.ipynb  explore_randers_metric.ipynb  explore_randers_solvers.ipynb  explore_riemannian_metric.ipynb  explore_riemannian_solvers.ipynb  random_randers.ipynb
experiment/: RM_HMC.ipynb
geodesic_distance/src/: pyproject.toml
geodesic_distance/src/geodesic_distance/: __init__.py  cometric.py  geodesic_distance.py  projected_geodesic_distance.py  samplers.py  utils.py
src/geodesic_toolbox/: __init__.py  cometric.py  samplers.py  solvers.py  utils.py
tests/: test_cometric.py  test_randers.py
